frontend/src/views/Dashboard.css
.dashboard {
    height: 100vh;
    width: 100vw;
    display: grid;
    padding: 1rem;
    grid-template-areas: 
    "card card calendar"
    "entries goals calendar"
    "entries goals analytics"
    "entries goals analytics";
    grid-template-columns: 3fr 3fr 4fr;
    grid-template-rows: 1fr .5fr 1.5fr;
    overflow: clip;
    gap: 1rem;
    background-color: var(--bg-dark);
}

.account-card {
  grid-area: card;
}

.entries {
  grid-area: entries;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  
}

.goals {
  grid-area: goals;
  display: flex;
  flex-direction: column;
}

.list-wrapper::after {
  content: '';
  position: sticky;
  bottom: 0;
  display: block;
  height: 2rem;
  background: linear-gradient(to bottom, transparent, var(--bg-dark), var(--bg-dark));
  pointer-events: none;
}

.list-wrapper {
    overflow-y: auto;
    scroll-behavior: smooth;
    padding: 1rem 1rem 0 1rem;
}

::-webkit-scrollbar {
    width: 10px;
  }

::-webkit-scrollbar-thumb {
    background-color: var(--bg-light);
    border-radius: 6px;
    border: 2px solid var(--border-muted);
  }

::-webkit-scrollbar-track {
    margin-top: 2rem;
    margin-bottom: 1rem;
    background-color: var(--border-muted);
    border-radius: 5px;
}

.calendar {
  grid-area: calendar;
  background-color: var(--border-muted);
}

.analytics {
  grid-area: analytics;
  background-color: var(--border-muted);
}

.div-header {
    display: flex;
    flex-direction: column;
    padding: .5rem .5rem 0 .5rem ;
    font-weight: bold;
    font-size: 1rem;
    gap: .5rem;
    position: sticky;
    top: 0;
    z-index: 1;
    background-color: var(--bg-dark);
    box-shadow: 0 10px 12px 1rem var(--bg-dark);
    
    span {
        margin-left: .4rem;
    }

    button {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        gap: .4rem;
        border: none;
        background-color: transparent;
        font-size: .8rem;
        font-weight: 500;
        text-align: left;
        padding: .4rem;
        border-radius: .4rem;

        i {
            margin: 0;
        }
    }


    button:hover {
        background-color: var(--border-muted);
        cursor: pointer;
    }
}

.entries .entry-container {
  font-size: 0.7rem;
}

.goals .container {
  font-size: 0.7rem;
}

